--- a/src/static/main/css/style.css
+++ b/src/static/main/css/style.css
@@ -2,7 +2,7 @@
 .toolbar {
   background-color: #f1f1f1;
   text-align: center;
-  margin: 0 auto;
+  margin: 10px auto 0;
   padding: 25px 0;
   width: 80%;
 }
